--- a/MVP_Sprint_Machine_Learning_&_Analytics.ipynb
+++ b/MVP_Sprint_Machine_Learning_&_Analytics.ipynb
@@ -3,11 +3,24 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "9ASsgRBjmcJD"
+        "id": "Kyo9GY1bbgal"
       },
       "source": [
-        "- Introdução\n",
-        "- Descrição do Problema"
+        "## Problema 1: Regressão - Prevendo o Percentual de Gordura"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Descrição do Desafio:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Prever o percentual de gordura de um indivíduo é um desafio complexo em análise corporal e saúde. Isso ocorre porque o percentual de gordura é influenciado por vários fatores, como a composição corporal, o metabolismo, a idade, o gênero e o nível de atividade física. Além disso, existem diferentes métodos para medir o percentual de gordura, como impedância bioelétrica, dobras cutâneas e medições de densidade corporal, cada um com suas próprias limitações e precisão. Portanto, criar um modelo preciso e robusto que leve em conta essas variáveis ​​e técnicas de medição é essencial para obter resultados confiáveis ​​na predição do percentual de gordura e auxiliar em avaliações de saúde e bem-estar."
       ]
     },
     {
