--- a/MVP_Sprint_Machine_Learning_&_Analytics.ipynb
+++ b/MVP_Sprint_Machine_Learning_&_Analytics.ipynb
@@ -1874,6 +1874,13 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Classificar imagens em seus respectivos esportes é um desafio complexo em visão computacional. Isso ocorre devido à grande variação nas imagens de diferentes esportes, que podem apresentar cenários, ângulos e condições de iluminação distintas. Além disso, alguns esportes podem ter características visuais semelhantes, o que torna a distinção entre classes ainda mais difícil. O problema é agravado pela presença de ruídos, oclusões e variações intraclasse. Para superar esses obstáculos, é necessário desenvolver modelos de aprendizado profundo robustos e eficientes, capazes de extrair características relevantes e representativas das imagens para realizar uma classificação precisa. A coleta de um conjunto de dados representativo e bem anotado também é essencial para treinar um modelo que possa generalizar adequadamente para novas imagens e realizar uma classificação acurada em diferentes esportes."
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "74Ml5TMubuxi"
       },
